shelter/style/style.css
/* ... */
.top-wrapper {
    display: flex;
    justify-content: center;
    padding-top: 60px;
    min-height: 788px;
    gap: 3.5%;
}

.top-content {
    padding-top: 163px;
    max-width: 460px;
    flex-shrink: 3;
}

.top__heading {
    color: #fff;
    margin-bottom: 42px;
}

.top__text {
    color: #cdcdcd;
    margin-bottom: 42px;
}

.top__image-wrapper {
    display: flex;
    align-items: flex-end;
}

.top__image {
    object-fit: scale-down;
    max-height: 728px;
}

/* About */

.about {
    background-color: #fff;
    padding-top: 80px;
    padding-bottom: 100px;
}

.about-wrapper {
    display: flex;
    justify-content: center;
    gap: 10%;
}

.about__image {
    max-height: 408px;
    object-fit: scale-down;
}

.about-content {
    display: flex;
    flex-direction: column;
    gap: 25px;
    max-width: 430px;
    padding-top: 14px;
    flex-shrink: 3;
}


/* Pets */

.pets,
.pets-catalog {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 80px;
    padding-bottom: 100px;
}

.pets__heading {
    text-align: center;
    margin-bottom: 60px;
}

.pets__card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 28px;
    max-width: 270px;
    height: 435px;
    border-radius: 9px;
    background-color: #fff;
    transition: all 0.3s linear;
    padding-bottom: 30px;
}

.pets__card:hover {
    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
}

.pets__card:hover .button {
    background-color: #fddcc4;
    border-color: #fddcc4;
}

/* Pets Catalog */

.pets__cards {
    display: flex;
    flex-wrap: wrap;
    column-gap: 40px;
    row-gap: 30px;
    justify-content: center;
}

.pets__pagination {
    padding-top: 60px;
}

.pagination__list {
    display: flex;
    gap: 20px;
}

/* Carousel */

.carousel {
    width: 100%;
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    column-gap: 4.4%;
}

.carousel__cards {
    display: flex;
    width: 990px;
    gap: 9%;
    justify-content: space-between;
}

.carousel__button {
    margin-top: 60px;
}

.carousel__control {
    max-height: 52px;
    padding: 0;
    border: none;
    background-color: #f6f6f6;
    cursor: pointer;
}

.carousel__control svg,
.carousel__control rect {
    transition: all 0.3s linear;
}

.carousel__control:hover rect {
    fill: #fddcc4;
    stroke: #fddcc4;
}


.carousel__control:active rect {
    fill: #f1cdb3;
    stroke: #f1cdb3;
}


.carousel__control:disabled rect {
    fill: transparent;
    stroke: #CDCDCD;
}

.carousel__control:disabled path {
    fill: #CDCDCD;
}

/* Help */

.help {
    padding-top: 80px;
    padding-bottom: 100px;
    min-height: 611px;
    background-color: #fff;
}

.help-wrapper {
    /* width: 1026px; */
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
}

.help__heading {
    text-align: center;
    margin-bottom: 60px;
}

.help__list {
    width: 1026px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    column-gap: 119px;
    row-gap: 55px;
}

.help__item {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.help__item::before {
    content: "";
    display: block;
    height: 60px;
    width: 60px;
    margin-bottom: 27px;
    background-size: cover;
    background-repeat: no-repeat;
}

.help__item_food::before {
    background-image: url("../assets/icons/icon-pet-food.svg");
}

.help__item_transportation::before {
    background-image: url("../assets/icons/icon-transportation.svg");
}

.help__item_toys::before {
    background-image: url("../assets/icons/icon-toys.svg");
}

.help__item_bowls::before {
    background-image: url("../assets/icons/icon-bowls-and-cups.svg");
}

.help__item_shampoos::before {
    background-image: url("../assets/icons/icon-shampoos.svg");
}

.help__item_vitamins::before {
    background-image: url("../assets/icons/icon-vitamins.svg");
}

.help__item_medicines::before {
    background-image: url("../assets/icons/icon-medicines.svg");
}

.help__item_collars::before {
    background-image: url("../assets/icons/icon-collars-leashes.svg");
}

.help__item_sleeping::before {
    background-image: url("../assets/icons/icon-sleeping-area.svg");
}

/* Donation */

.donation {
    padding-top: 80px;
    padding-bottom: 100px;
}

.donation-wrapper {
    display: flex;
    gap: 30px;
    flex-wrap: wrap;
}

.donation-wrapper::before {
    content: '';
    display: block;
    width: 505px;
    height: 261px;
    background-image: url(../assets/background/donation-dog.png);
    background-size: cover;
    background-repeat: no-repeat;
    margin-left: 143px;
    margin-top: 8px;
}

.donation__content {
    display: flex;
    flex-direction: column;
    gap: 19px;
    width: 380px;
}

.donation__banking {
    display: block;
    border-radius: 9px;
    padding: 8px 15px;
    width: 350px;
    height: 43px;
    background-color: #f1cdb3;
}

.donation__credit-card {
    display: flex;
    align-items: center;
}

.donation__credit-card::before {
    content: "";
    display: block;
    background-image: url(../assets/icons/donation-credit-card.svg);
    width: 30px;
    height: 23px;
    margin-right: 15px;
}
/* ... */

